fixed gaps, change on marigns

--- a/src/css/components/recipte-item.css
+++ b/src/css/components/recipte-item.css
@@ -24,6 +24,18 @@
   .recipe-item {
     width: 240px;
     height: 264px;
+
+    display: inline-flex;
+    margin: 0 16px 16px 0;
+  }
+
+  .recipe-item:nth-child(2n),
+  .recipe-item:last-child {
+    margin-right: 0;
+  }
+
+  .recipe-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
   }
 }
 
@@ -31,6 +43,17 @@
   .recipe-item {
     width: 250px;
     height: 287px;
+
+    margin: 0 16px 32px 0;
+  }
+
+  .recipe-item:nth-child(3n),
+  .recipe-item:last-child {
+    margin-right: 0;
+  }
+
+  .recipe-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
   }
 }
 
